# ccheck

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
src/: main.rs
